Finish ContactDetails page

--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -69,4 +69,8 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  .vue-color {
+    color: #41B883;
+  }
 }
