Add ContactEdit/Add page

--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -73,4 +73,12 @@ body {
   .vue-color {
     color: #41B883;
   }
+
+  .btn {
+    all: unset;
+    cursor: pointer;
+    margin: .5rem;
+    font-size: 1.5rem;
+    color: #41B883;
+  }
 }
